--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -328,7 +328,7 @@ background-position: left top;
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">protoboard.org</a>
+          <a class="navbar-brand" href="#nav_menu">protoboard.org</a>
         </div>
 
         <div  id="navbar" class=" collapse navbar-collapse">
@@ -364,6 +364,7 @@ background-position: left top;
       </div>
     </nav>
 
+    {{navegation|safe}}
 
 
 
@@ -372,12 +373,6 @@ background-position: left top;
 
     <div class="container-fluid">
       <div class="row">
-        <div class="col-md-3 col-sm-3 sidebar">
-                {{navegation|safe}}
-
-        </div>
-
-          <div class="col-sm-9 col-sm-offset-3 col-md-7 col-md-offset-3 main">
           <div class="header">
 				<a href="#nav_menu">Demo</a>
 
@@ -391,7 +386,6 @@ background-position: left top;
                 -->
             {% endblock content %}
 
-           </div>
 
 
       </div>
